# latest-japan-earthquake

./: README.md  main.py  pyproject.toml  requirements.txt
latestearthquake/: __init__.py
